# codename-bingus

./: .gitignore  README.md  file structure.md  justfile
bingus/src/: index.html  main.js
bingus/src-tauri/: .gitignore  Cargo.toml  build.rs
examples/items/: Admire Karlskirche's dome.BingoItem  Browse the Naschmarkt.BingoItem  Buy a fresh pretzel from a market stall.BingoItem  Catch a show at the Vienna State Opera.BingoItem  Climb the South Tower of Stephansdom.BingoItem  Cool off with gelato.BingoItem  Discover a diversity-themed traffic light.BingoItem  Discover the shops on Spittelberggasse.BingoItem  Drink an Almdudler.BingoItem  Eat a Käsekrainer.BingoItem  Eat a Mozartkugel.BingoItem  Eat a proper Wiener Schnitzel.BingoItem  Explore the MuseumsQuartier.BingoItem  Find Beethoven's grave.BingoItem  Find the golden Strauss.BingoItem  Follow The Third Man film locations.BingoItem  Get a bird's-eye view from the Donauturm.BingoItem  Order a Melange in a traditional Kaffeehaus.BingoItem  Relax on Danube Island.BingoItem  Ride the Wiener Riesenrad.BingoItem  Ride the historic tram around the Ringstrasse.BingoItem  Sample food at the Brunnenmarkt.BingoItem  See Klimt's The Kiss at the Belvedere.BingoItem  See the Hundertwasserhaus.BingoItem  Spend an evening at a Heuriger.BingoItem  Take a side trip.BingoItem  (+12 more)
src/: index.html  main.js
src-tauri/: .gitignore  Cargo.toml  build.rs  rustfmt.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: auto_serde.rs  lib.rs  main.rs
src-tauri/src/bingo/: completion.rs  item.rs  mod.rs  project.rs
(+17 files in other folders)
