[package]
name = "bingus"
version = "0.1.0"
description = "A Travel Bingo App"
authors = ["Alex Janninck", "Devin Bell", "Nate Farrell", "Zayaan Salem"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bingus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
# prost-build = "0.14.4"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ron = "0.12.2"
fake = "5.1.0"
rand = "0.10.2"
anyhow = "1.0.103"

# Read the optimization guideline for more details: https://tauri.app/concept/size/#cargo-configuration
[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true

[profile.dev.package."*"]
# Optimize dependencies to release level even in dev compilation mode
opt-level = 3
strip = true
